feat: implement JWT authentication and audit logging for user and group operations

--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,8 @@ LDAP_USE_SSL=false
 LDAP_BIND_DN=CN=Service Account,CN=Users,DC=example,DC=com
 LDAP_BIND_PASSWORD=your_password_here
 LDAP_BASE_DN=DC=example,DC=com
+
+# JWT Configuration
+JWT_SECRET_KEY=your-secret-key-change-this-in-production
+JWT_ALGORITHM=HS256
+JWT_EXPIRATION_HOURS=24
